--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,13 +1,13 @@
 .container {
-    min-width: 100vw;
-    min-height: 100vh;
-    display: grid;
-    grid-template-rows: 20px 1fr 20px;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-items: center;
-    margin-top: 150px;
 }
 
 .logo {
+    margin-top: 15%;
+    margin-bottom: 10%;
     justify-self: center;
 }
